
misc_ddir = ${userfsdatadir}/misc/wifi
dist_misc_d_DATA = hostapd_open.conf
dist_misc_d_DATA += hostapd_wpa.conf
dist_misc_d_DATA += hostapd_wpa_wpa2.conf
dist_misc_d_DATA += hostapd_wpa2.conf
dist_misc_d_DATA += wpa_supplicant.conf
dist_misc_d_DATA += p2p.conf
dist_misc_d_DATA += hostapd.accept
dist_misc_d_DATA += hostapd.deny

init_ddir = ${sysconfdir}/init.d
dist_init_d_SCRIPTS = wlan
