etcdir = ${sysconfdir}

init_ddir = ${sysconfdir}/init.d
dist_init_d_SCRIPTS = ipc-startup.sh
dist_init_d_SCRIPTS += wlan

misc_ddir = ${userfsdatadir}/misc/wifi
dist_misc_d_DATA = hostapd.conf
dist_misc_d_DATA += hostapd-wlan1.conf
dist_misc_d_DATA += sta_mode_hostapd.conf
dist_misc_d_DATA += wpa_supplicant.conf
dist_misc_d_DATA += FIRST_BOOT.flag

firmware_ddir = ${base_libdir}/firmware/wlan/qca_cld
dist_firmware_d_DATA = WCNSS_qcom_cfg.ini
