# Export essential native headers
nativeheaders_includedir=$(includedir)/android
nativeheaders_include_HEADERS := $(top_srcdir)/include/android/native_window.h
nativeheaders_include_HEADERS += $(top_srcdir)/include/android/rect.h

mediahardware_includedir=$(includedir)/media/hardware
mediahardware_include_HEADERS := $(top_srcdir)/include/media/hardware/MetadataBufferType.h
mediahardware_include_HEADERS += $(top_srcdir)/include/media/hardware/HardwareAPI.h
mediahardware_include_HEADERS += $(top_srcdir)/include/media/hardware/OMXPluginBase.h
mediahardware_include_HEADERS += $(top_srcdir)/include/media/hardware/HDCPAPI.h
mediahardware_include_HEADERS += $(top_srcdir)/include/media/hardware/CryptoAPI.h
mediahardware_include_HEADERS += $(top_srcdir)/include/media/hardware/VideoAPI.h

nativeui_includedir=$(includedir)/ui
nativeui_include_HEADERS := $(top_srcdir)/include/ui/ANativeObjectBase.h
nativeui_include_HEADERS += $(top_srcdir)/include/ui/GraphicBuffer.h
