# Export essential opengl headers
eglheaders_includedir=$(includedir)/opengl/include/EGL
eglheaders_include_HEADERS := $(top_srcdir)/opengl/include/EGL/egl.h
eglheaders_include_HEADERS += $(top_srcdir)/opengl/include/EGL/eglext.h
eglheaders_include_HEADERS += $(top_srcdir)/opengl/include/EGL/eglplatform.h

glesheaders_includedir=$(includedir)/opengl/include/GLES
glesheaders_include_HEADERS := $(top_srcdir)/opengl/include/GLES/egl.h
glesheaders_include_HEADERS += $(top_srcdir)/opengl/include/GLES/gl.h
glesheaders_include_HEADERS += $(top_srcdir)/opengl/include/GLES/glext.h
glesheaders_include_HEADERS += $(top_srcdir)/opengl/include/GLES/glplatform.h

gles2headers_includedir=$(includedir)/opengl/include/GLES2
gles2headers_include_HEADERS := $(top_srcdir)/opengl/include/GLES2/gl2.h
gles2headers_include_HEADERS += $(top_srcdir)/opengl/include/GLES2/gl2ext.h
gles2headers_include_HEADERS += $(top_srcdir)/opengl/include/GLES2/gl2platform.h

gles3headers_includedir=$(includedir)/opengl/include/GLES3
gles3headers_include_HEADERS := $(top_srcdir)/opengl/include/GLES3/gl3.h
gles3headers_include_HEADERS += $(top_srcdir)/opengl/include/GLES3/gl3ext.h
gles3headers_include_HEADERS += $(top_srcdir)/opengl/include/GLES3/gl3platform.h
gles3headers_include_HEADERS += $(top_srcdir)/opengl/include/GLES3/gl31.h

khrheaders_includedir=$(includedir)/opengl/include/KHR
khrheaders_include_HEADERS := $(top_srcdir)/opengl/include/KHR/khrplatform.h
